--- a/MKCalendar.html
+++ b/MKCalendar.html
@@ -118,25 +118,23 @@
                         <br>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="row justify-content-center">
-                    <a href="https://detroiturbancraftfair.com/" target="_blank" ><img src ="./img/unnamed.jpg" id="ducf"></a>
-                </div>
-            </div>
+            <h4 id="shipping"> FREE SHIPPING ON ALL ITEMS! </h4>
             <br>
+            <h4 id="shipping"> SHIPPING DEADLINE FOR DELIVERY </h4>
+            <h4 id="shipping"> BY CHRISTMAS IS DECEMBER 19 2019! </h4>
             <br>
             <br>
             <div class="row justify-content-center">
                 <div class="col-4" id="calLeftCol">
                     <p id="calHead">UPCOMING EVENTS</p><hr id="eventHr">
-                    <p id="tentative">**   THIS WEEKEND!  **</p>
+                    <p id="dates">**   2020  **</p>
                     <br>
-                    
-                    <p id="dates"><a href="https://detroiturbancraftfair.com/" target="_blank">December 6, 7, 8, 2019 <br> Detroit Urban Craft Fair <br> Masonic Temple, Detroit</a></p>
-                    <br>
+                    <p id="dates">TBD</p>
+                    <p id="dates">Stay tuned!</p>
                 </div>
                 <div class="col-4" id="calRightCol" >
                     <p id="calHead"> PAST EVENTS </p><hr id="eventHr"><br>
+                    <p id="datesOld">December 6/7/8 2019 ↠ Detroit Urban Craft Fair ↠ Detroit, MI</p>
                     <p id="datesOld">October 28, 2018 ↠  Chic & Unique Market ↠ Shelby Township MI</p>
                     <p id="datesOld">October 5/6, 2018 ↠ Stony Creek Fall For Nature Craft Show ↠ Stony Creek MetroPark</p>
                     <p id="datesOld">September 16, 2018 ↠ CRWC Crafts on the Clinton Beer & Craft Show ↠ Yates Cider Mill</p>
