--- a/MKShopCowls.html
+++ b/MKShopCowls.html
@@ -103,11 +103,16 @@
                     <a href="./MKShopMittens.html"><button id="learnMoreBtn">MITTENS</button></a>
                     <a href="./MKShopCowls.html"><button id="learnMoreBtn">COWLS</button></a>
                     <a href="./MKShopHats.html"><button id="learnMoreBtn">HATS</button></a>
-                    <a href="./MKShopMisc.html"><button id="learnMoreBtn">MISC</button></a>
+                    <!--<a href="./MKShopMisc.html"><button id="learnMoreBtn">MISC</button></a>-->
                 </div>
             </div>
         </div>
     </div>
+
+<br>
+    <h5 id="shipping"> FREE SHIPPING ON ALL ITEMS! </h5>
+    <h5 id="shipping"> SHIPPING DEADLINE FOR DELIVERY </h5>
+    <h5 id="shipping"> BY CHRISTMAS IS DECEMBER 19 2019! </h5>
 
  <!-- shop app -->
     <div class="container" id="cowlApp">
