--- a/MKShopMisc.html
+++ b/MKShopMisc.html
@@ -84,7 +84,7 @@
 <!-- siteNav -->
     <div class="container-fluid" id="siteNav">
         <div class="row justify-content-center">
-            <a href="./index.html"><button class="siteNavBut">HOME<hr id="btnHr"></button></a>
+            <a href="./MK.html"><button class="siteNavBut">HOME<hr id="btnHr"></button></a>
             <a href="./MKAbout.html"><button class="siteNavBut">ABOUT<hr id="btnHr"></button></a>
             <a href="./MKShopMittens.html"><button class="siteNavBut">SHOP<hr id="btnHr"></button></a>
             <a href="./MKMittensPortfolio.html"><button class="siteNavBut">&nbsp;&nbsp;PAST WORK&nbsp;&nbsp;<hr id="btnHr"></button></a>
@@ -108,6 +108,11 @@
         </div>
     </div>
 
+<br>
+    <h5 id="shipping"> FREE SHIPPING ON ALL ITEMS! </h5>
+    <h5 id="shipping"> SHIPPING DEADLINE FOR DELIVERY </h5>
+    <h5 id="shipping"> BY CHRISTMAS IS DECEMBER 19 2019! </h5>
+    
  <!-- shop app -->
     <div class="container" id="miscApp">
         <div class="row justify-content-center" >
