--- a/MKHatsPortfolio.html
+++ b/MKHatsPortfolio.html
@@ -98,7 +98,7 @@
                     <a href="./MKMittensPortfolio.html"><button id="learnMoreBtn">MITTENS</button></a>
                     <a href="./MKCowlsPortfolio.html"><button id="learnMoreBtn">COWLS</button></a>
                     <a href="./MKHatsPortfolio.html"><button id="learnMoreBtn">HATS</button></a>
-                    <a href="./MKMiscPortfolio.html"><button id="learnMoreBtn">MISC</button></a>
+                    <!--<a href="./MKMiscPortfolio.html"><button id="learnMoreBtn">MISC</button></a>-->
                 </div>
             </div>
         </div>
