--- a/MKCalendar.html
+++ b/MKCalendar.html
@@ -120,8 +120,8 @@
             </div>
             <h4 id="shipping"> FREE SHIPPING ON ALL ITEMS! </h4>
             <br>
-            <h4 id="shipping"> SHIPPING DEADLINE FOR DELIVERY </h4>
-            <h4 id="shipping"> BY CHRISTMAS IS DECEMBER 19 2019! </h4>
+            <h4 id="shipping"> ORDER DEADLINE FOR DELIVERY </h4>
+            <h4 id="shipping"> BY CHRISTMAS IS DECEMBER 20 2019! </h4>
             <br>
             <br>
             <div class="row justify-content-center">
