--- a/MKShopCowls.html
+++ b/MKShopCowls.html
@@ -111,8 +111,8 @@
 
 <br>
     <h5 id="shipping"> FREE SHIPPING ON ALL ITEMS! </h5>
-    <h5 id="shipping"> SHIPPING DEADLINE FOR DELIVERY </h5>
-    <h5 id="shipping"> BY CHRISTMAS IS DECEMBER 19 2019! </h5>
+    <h5 id="shipping"> ORDER DEADLINE FOR DELIVERY </h5>
+    <h5 id="shipping"> BY CHRISTMAS IS DECEMBER 20 2019! </h5>
 
  <!-- shop app -->
     <div class="container" id="cowlApp">
