--- a/MK.html
+++ b/MK.html
@@ -100,9 +100,9 @@
         <div class="row justify-content-center">
             <div class="container">
                 <div class="col justify-content-center" id="learnMoreBox">
-                    <h4>↠ CURRENT SPECIALS ↞ </h4>
-                    <p> FREE SHIPPING ON ALL ITEMS! </p>
-                    <a href="https://www.mathieknits.etsy.com" target= "_blank"><button id="learnMoreBtn">SHOP NOW</button></a>
+                    <h4>↠ UPDATE COMING SOON ↞ </h4>
+                    <p> 30+ NEW ITEMS ARE IN THE WORKS! </p>
+                    <a href="https://www.instagram.com/mathieknits/" target= "_blank"><button id="learnMoreBtn">FOLLOW ME</button></a>
                 </div>
             </div>
         </div>
@@ -238,8 +238,9 @@
                     <p id="calHead">UPCOMING EVENTS</p><hr id="eventHr">
                     <p id="dates">**   2020  **</p>
                     <br>
-                    <p id="dates">TBD</p>
-                    <p id="dates">Stay tuned!</p>
+                    <p id="dates">DETROIT URBAN CRAFT FAIR</p>
+                    <p id="dates">VIRTUAL MARKET</p>
+                    <p id="dates">TAKEOVER DAY: SUNDAY NOV 22, 3PM-8PM</p>
                     <br>
                 </div>
                 <div class="col-4" id="calRightCol" >
