--- a/MKAbout.html
+++ b/MKAbout.html
@@ -124,7 +124,7 @@
             <div class="col-12" id="aboutEMCol">
 
                 <p id="infoP">
-                     &emsp;Started in 2016, MATHIEKNITS has evolved over the past few years, with more intricately knit items and a broadening of the range of products. MATHIEKNITS is a one-woman small business, crafting hand-knit accessories from all natural, hand-dyed, premium Merino wool.
+                     &emsp;Started in 2016, MATHIEKNITS has evolved over the past few years, with more intricately knit items and a broadening of the range of products I have to offer. MATHIEKNITS is a one-woman small business, crafting hand-knit accessories from all natural, hand-dyed, premium Merino wool.
                 </p>
                 <p id="infoP">
                     &emsp;I have been knitting for over 16 years. A drive to be creative, & encouragement from others who have received my items as gifts, has given me the confidence to open the MATHIEKNITS store as a part-time small business. I take pride in the items I create, have a keen sense for detail, and I meticulously choose colorways to represent my brand.
@@ -157,11 +157,13 @@
             <div class="col-12" id="aboutEMColB">
 
                 <p id="infoP">
-                    &emsp;My name is Emily Mathieson. I am a 29 year old graduate of the Biological Sciences, having focused my degree on Ecology & Fisheries. I completed an internship with the National Park Service as a Native Trout Conservationist in Yellowstone National Park. 
+                    &emsp;My name is Emily Mathieson. I am a 30 year old graduate of the Biological Sciences, having focused my degree on Ecology & Fisheries. I completed an internship with the National Park Service as a Native Trout Conservationist in Yellowstone National Park. 
                 </p>
                 <p id="infoP">
                     &emsp;I am fascinated by the natural world, and this is where the inspiration for selecting the colors I work with comes from. All of my hand-knit items are named after some aspect of the natural world, may it be types of plants, animals, minerals, fossils, or ecological terms.
                 </p>
+                <p id="infoP">&emsp;10% of 2020's sales will be donated to Dinosaur Hill Nature Center in honor and in memory of my dear friend and cousin, Jeremy Pavelek, who passed away this year in August. Jeremy has had a profound and unquestionable positive influence on me. He is the reason why I love the natural world and all creatures big and small! Thank you for helping me (us!) contribute to help fund nature programs for children at a place where we spent countless times together. </p>
+
                 <p id="infoP">
                     &emsp;Although I have a passion for biology, I have needed to switch gears and currently I am learning how to write & create code through online courses & experimenting with my own projects. I am currently working towards becoming a Web Developer ( this website was one of my first major projects! ), and have an exploratory interest in game design & development. 
                 </p>
@@ -169,7 +171,7 @@
                     &emsp;Running, maintaining, & creating for MATHIEKNITS is an enjoyable side project and hobby, and has been increasing in success with each successive year. It is something I truly enjoy doing, and is both therapeutic and rewarding.
                 </p>
                  <p id="infoP">
-                    &emsp;A few of my favorite things include my two boofs named Dingo & Molly, a Hedgehog named Juniper, thunderstorms, and Worcestershire sauce. I like to spend my time investigating stream beds, watching the Great British Bake Off, listening to podcasts, and of course, knitting.
+                    &emsp;A few of my favorite things include my dog named Molly, a Hedgehog named Juniper, thunderstorms, and Worcestershire sauce. I like to spend my time investigating stream beds, hiking, bug-hunting, and of course, knitting!
                 </p>
             </div>
         </div>
