--- a/MKCalendar.html
+++ b/MKCalendar.html
@@ -118,7 +118,7 @@
                         <br>
                 </div>
             </div>
-            <h4 id="shipping"> FREE SHIPPING ON ALL ITEMS! </h4>
+            <h4 id="shipping"></h4>
             <br>
             <br>
             <div class="row justify-content-center">
