--- a/MKShopCowls.html
+++ b/MKShopCowls.html
@@ -110,7 +110,7 @@
     </div>
 
 <br>
-    <h5 id="shipping"> FREE SHIPPING ON ALL ITEMS! </h5>
+    <h5 id="shipping"> SHOP UPDATE COMING SOON! </h5>
 
  <!-- shop app -->
     <div class="container" id="cowlApp">
