--- a/MKCalendar.html
+++ b/MKCalendar.html
@@ -126,8 +126,9 @@
                     <p id="calHead">UPCOMING EVENTS</p><hr id="eventHr">
                     <p id="dates">**   2020  **</p>
                     <br>
-                    <p id="dates">TBD</p>
-                    <p id="dates">Stay tuned!</p>
+                    <p id="dates">DETROIT URBAN CRAFT FAIR</p>
+                    <p id="dates">VIRTUAL MARKET</p>
+                    <p id="dates">TAKEOVER DAY: SUNDAY NOV 22, 3PM-8PM</p>
                 </div>
                 <div class="col-4" id="calRightCol" >
                     <p id="calHead"> PAST EVENTS </p><hr id="eventHr"><br>
