--- a/MK.html
+++ b/MK.html
@@ -230,7 +230,7 @@
                         <hr id="eventHr">
                 </div>
             </div>
-            <h4 id="shipping"> FREE SHIPPING ON ALL ITEMS! </h4>
+            <h4 id="shipping"> SHOP UPDATE COMING SOON! </h4>
             <br>
             <br>
             <div class="row justify-content-center">
